--- a/ansible/roles/td-agent/templates/nefmon.conf
+++ b/ansible/roles/td-agent/templates/nefmon.conf
@@ -11,12 +11,12 @@
   self_hostname ${hostname}
   keepalive 3600
   flush_interval 5s
-  {{ for server in nefmon_log_servers }}
+  {% for server in nefmon_log_servers %}
   <server>
     host {{ server.host }}
     port {{ server.port }}
     username {{ nefmon_log_username }}
     password {{ nefmon_log_password }}
   </server>
-  {{ endfor }}
+  { endfor %}
 </match>
