--- a/ansible/roles/td-agent/templates/nefmon.conf
+++ b/ansible/roles/td-agent/templates/nefmon.conf
@@ -18,5 +18,5 @@
     username {{ nefmon_log_username }}
     password {{ nefmon_log_password }}
   </server>
-  { endfor %}
+  {% endfor %}
 </match>
